test/invalid/baseline/promise-with-extended-attribute.txt
Syntax error at line 2 in promise-with-extended-attribute.widl, since `interface Foo`:
  Promise<[XAttr] DOMString>
          ^ Promise type cannot have extended attribute
